udemy/udemy-java-senior/kubernetes/5_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientapp-deployment
  labels:
    app: clientapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientapp
  template:
    metadata:
      labels:
        app: clientapp
    spec:
      containers:
        - name: clientapp
          image: madalinaotvos/k8dockerkeycloak:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: clientapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
