udemy/udemy-java-senior/kubernetes/gateway-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-gateway-v2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    "nginx.ingress.kubernetes.io/proxy-buffer-size": "228k"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/app/greeting"
            backend:
              service:
                name: gatewayserver
                port:
                  number: 8072

    - http:
        paths:
          - pathType: ImplementationSpecific
            path: "/()(.*)"
            backend:
              service:
                name: gatewayserver
                port:
                  number: 8072
